--- a/index.html
+++ b/index.html
@@ -2,9 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src/assets/images/key_logo_black.png" />
+    <link
+      id="favicon"
+      rel="icon"
+      type="image/svg+xml"
+      href="src/assets/images/key_logo_black.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>anemoi -アネモイ- | Key</title>
+    <script>
+      function updateFavicon() {
+        const favicon = document.getElementById("favicon");
+        const isDarkMode =
+          window.matchMedia && window.matchMedia("(prefers-color-scheme: dark)").matches;
+        favicon.href = isDarkMode
+          ? "src/assets/images/key_logo_white.png"
+          : "src/assets/images/key_logo_black.png";
+      }
+
+      // Initial check
+      updateFavicon();
+
+      // Listen for changes in the color scheme
+      window.matchMedia("(prefers-color-scheme: dark)").addEventListener("change", updateFavicon);
+    </script>
   </head>
   <body>
     <div id="root"></div>
