--- a/index.html
+++ b/index.html
@@ -2,12 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      id="favicon"
-      rel="icon"
-      type="image/svg+xml"
-      href="src/assets/images/key_logo_black.png"
-    />
+    <link id="favicon" rel="icon" type="image/svg+xml" href="key_logo_black.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>anemoi -アネモイ- | Key</title>
     <script>
@@ -15,9 +10,7 @@
         const favicon = document.getElementById("favicon");
         const isDarkMode =
           window.matchMedia && window.matchMedia("(prefers-color-scheme: dark)").matches;
-        favicon.href = isDarkMode
-          ? "src/assets/images/key_logo_white.png"
-          : "src/assets/images/key_logo_black.png";
+        favicon.href = isDarkMode ? "key_logo_white.png" : "key_logo_black.png";
       }
 
       // Initial check
