--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         const favicon = document.getElementById('favicon');
         const isDarkMode =
           window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
-        favicon.href = isDarkMode ? 'key_logo_white.webp' : 'key_logo_black.webp';
+        favicon.href = isDarkMode ? 'key_logo_white.png' : 'key_logo_black.png';
       }
 
       // Initial check
