--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="author" content="phuocdinh462@gmail.com" />
     <meta
       name="description"
-      content="Anemoi - A beautiful and engaging visual novel game by Key. Explore the story, characters, and more. This website is implemented by PhuocDinh462"
+      content="anemoi - A beautiful and engaging visual novel game by Key. Explore the story, characters, and more."
     />
     <link id="favicon" rel="icon" type="image/svg+xml" href="key_logo_black.webp" />
     <!-- Google Fonts -->
