chore: Update author meta tag for clarity

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="author" content="phuocdinh462@gmail.com" />
+    <meta name="author" content="Phuoc Dinh (phuocdinh462@gmail.com)" />
     <meta
       name="description"
       content="anemoi - A beautiful and engaging visual novel game by Key. Explore the story, characters, and more."
